Migrate to Maven 3.9 API, JSR-330 DI, SLF4J logging, and docs cleanup (#21)
* Migrate to Maven 3.9 API, JSR-330 DI, SLF4J logging, and docs cleanup

Maven API migration:
- Replace removed ArtifactResolver/ArtifactFactory with Aether
  RepositorySystem throughout DefaultDependenciesTool and
  DefaultThirdPartyTool
- Use allowStubModel=true and lenient build settings in
  loadProjectDependencies; eliminates separate stub-fallback code path
- Synchronize shared artifact cache (TreeMap) under concurrent builds
- Restore Aether exception chaining via initCause()

Compatibility matrix:
- Add GitHub Actions compatibility workflow (Java 8/11/17/21/25 ×
  Maven 3.6.3/3.8.8/3.9.9)
- Exclude update-file-header+classpath:// combinations on Java 11+ with
  Maven < 3.9 (missing --add-opens)
- Add maven-api-compat IT to verify DI wiring on each Maven version

JSR-330 / SLF4J migration:
- Replace Plexus @Component/@Requirement with @Named/@Singleton/@Inject
  in DefaultDependenciesTool, DefaultThirdPartyTool, all 11
  FileHeaderTransformer subclasses, and 3 Mojo abstract bases
- Replace AbstractLogEnabled/getLogger() with static SLF4J Logger fields
- Fix DefaultThirdPartyToolTest to remove Plexus enableLogging() setup

Documentation and cleanup:
- Rewrite README with compatibility table, fork-specific features
  (Sonatype, Xray, version ranges, new goals), and license-registry
  parameter details; fix wrong goal name and stale doxia workaround
- Update IT-CATALOG and maven-api-compat pom to reflect JSR-330/Sisu
- Delete README_github.md (mojohaus upstream leftover)
- Fix m2e lifecycle-mapping-metadata.xml groupId
- Fix org.codehaus.mojo groupId and dead codehaus.org links in all
  Maven site documentation

* Enable invoker streamLogs to diagnose Java 25 CI failures

* Fix Java 25 Temurin DI failures by restoring Plexus component registration

Sisu's LocatorWiring fails to discover plugin components from
META-INF/sisu/javax.inject.Named on Java 25 Temurin Linux, causing
ProvisionExc